# voice-ppt-ai

./: .env.example  .gitignore  AUDIT.md  DEPLOY_APP_SERVER.md  IMPLEMENTED.md  MASTER_PLAN.md  MIN_PIPELINE_PLAN.md  PIPELINE_RECOVERY.md  SETUP.md  SPECS.md  architecture.md  start.sh
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/src/api/dependencies/: auth.py  providers.py  validation.py
backend/src/api/errors/: handlers.py
backend/src/api/middleware/: auth.py  cors.py  logging.py
backend/src/api/routes/: auth.py  files.py  health.py  lectures.py  projects.py  voice.py
backend/src/config/: logging.py  settings.py
backend/src/core/domain/: events.py  value_objects.py
backend/src/core/dto/: auth.py  lecture.py  project.py  voice.py
backend/src/core/ports/: ai.py  storage.py
backend/src/infrastructure/ai_client/: base.py  embedding.py  llm.py  transcription.py  tts.py
backend/src/infrastructure/auth/: jwt.py  password.py
backend/src/infrastructure/db/: session.py
backend/src/infrastructure/storage/: local_storage.py
backend/src/worker/: celery_app.py
backend/src/worker/pipeline/: align_transcript.py  embed_narration.py  extract_audio.py  generate_embeddings.py  generate_narration.py  generate_tts.py  orchestrator.py  parse_pptx.py  transcribe.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_health.py  test_project_api.py  test_storage.py
backend/tests/unit/: test_auth.py  test_entities.py
(+70 files in other folders)
